# tc-potential-intensity

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: iho.dbf  north_atlantic.csv
data/SSP/: co2_concentrations.csv  co2_emissions.csv  temp_C.csv
docs/source/: conf.py  index.rst
src/: tc_extremes.py  tc_potential.py
src/notebooks/: evt_analysis.ipynb  pi_analysis.ipynb  ssp_analysis.ipynb
tests/: test_tc_extremes.py  test_tc_potential.py
tests/report/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6_tc_extremes_py.html  z_145eef247bfb46b6_tc_potential_py.html
